# FinDataScrap

./: .gitignore  GCP.code-workspace  GCP.py  __init__.py  classes.py  common.py  copy_etfRatios_toLocal.py  database.py  database_connect.py  database_mysql.py  database_sqlite.py  email_report.py  import_CMEfuts.py  import_ETFRatios.py  import_FXimpliedrates.py  import_commoCurves.py  import_govies.py  import_swaps.py  import_technicals.py  import_yahoo.py  main.py  pyproject.toml  read_data_fromPA.py  readme.md  requirements.txt  run.bat  scrap_ETFRatios.py  scrap_govies.py  scrap_selenium.py  scrap_simple.py  test.py  test.sql  transition_copydata.py  utils.py
GoogleCloud/: GCP.py
Others/: divs.py  test.py  transition_copydata.py
PIPENV/: from_pipenv_to_req.py  requirements.txt
databases/: __init__.py  classes.py  copy_ETF_Ratios.py  database_connect.py  database_mysql.py  database_sqlite.py  explore_ratios.py  inspect_PADB.py  manual_record_update.py  ratios.csv  read_data_fromPA.py
imports/: create_ETF_reference.py  import_CMEfuts.py  import_ETFRatios.py  import_ETF_static.py  import_FXimpliedrates.py  import_commoCurves.py  import_creditETF.py  import_futs_obb.py  import_govies.py  import_new.py  import_otherfuts.py  import_swaps.py  import_technicals.py  import_tips.py  import_yahoo.py  morningstar_cookies.txt  ratios_20231130.csv  scrap_selenium.py  static_ETF_DB.csv  temp_cookies.txt  test_divs.py  test_futs.py
utils/: __init__.py  email_CLM.py  utils.py
