[project]
name = "gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==25.1.0",
    "icecream==2.1.4",
    "ipykernel==6.29.5",
    "loguru==0.7.3",
    "mysql-connector-python==9.3.0",
    "openbb>=4.1.3",
    "openpyxl==3.1.5",
    "pandas==2.3.0",
    "paramiko==3.5.1",
    "pyarrow==20.0.0",
    "pymysql==1.1.1",
    "quandl==3.7.0",
    "requests==2.32.4",
    "rich==14.0.0",
    "selenium==4.33.0",
    "sqlalchemy==2.0.41",
    "sshtunnel==0.4.0",
    "tqdm==4.67.1",
    "undetected-chromedriver==3.5.5",
    "webdriver-manager==4.0.2",
    "yagmail==0.15.293",
    "yfinance==0.2.58",
]
